--- a/content/_i18n/hr.yaml
+++ b/content/_i18n/hr.yaml
@@ -73,7 +73,7 @@ development/clients/clients/items__OpenEthereum__description: |-
 
 # Clients
 development/clients/index/title: |-
-  klijenti
+  Clients
 
 # Download links for various Ethereum Classic clients and deployment tools
 development/clients/index/description: |-
